# web-api-template-rust

./: .env  Cargo.toml  README.md  application.yaml
src/: app.rs  common.rs  database.rs  error.rs  latency.rs  logger.rs  main.rs  response.rs  serde.rs  server.rs
src/api/: mod.rs  user.rs
src/config/: database.rs  mod.rs  server.rs
src/entity/: mod.rs  prelude.rs  sys_user.rs
