[package]
name = "web-api-template-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
tokio = { version = "1.49.0", features = ["full"] }
tracing = { version = "0.1.44", features = ["async-await"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "chrono"] }
config = { version = "0.15.19", features = ["yaml"] }
serde = { version = "1.0.228", features = ["derive"] }
anyhow = { version = "1.0.100" }
sea-orm = { version = "1.1.19", features = [
    "with-chrono",
    "debug-print",
    "sqlx-postgres",
    "with-rust_decimal",
    "runtime-tokio",
] }
num_cpus = "1.17.0"
dotenv = "0.15.0"
